As a user, I want to be able to edit a car listing [#184756220]
